Jenkins SBuild Plugin 0.1.2:

* In project configuration only provide already configured SBuild installations for selection.

Jenkins SBuild Plugin 0.1.1 - 2013-12-04:

(no changes, only fighting with maven-relase-plugin)

Jenkins SBuild Plugin 0.1.0 - 2013-12-03:

* Improved handling of SBuild installations.
* Support multiple buildfiles.
* Fixed support for multiple targets.

Jenkins SBuild Plugin 0.0.1 - 2013-12-01:

* Initial release.